# tootrain-qt

./: .build.yml  .gitignore  CMakeLists.txt  README.md  aboutdialog.ui  account.cpp  account.h  animationstate.cpp  animationstate.h  dummystatus.cpp  dummystatus.h  main.cpp  mainwindow.cpp  mainwindow.h  mastodonoauthwindow.cpp  mastodonoauthwindow.h  mastodonoauthwindow.ui  richtextcomponent.cpp  richtextcomponent.h  settingmanager.cpp  settingmanager.h  settingwindow.cpp  settingwindow.h  settingwindow.ui  status.h  statusimageloader.h  tootrain-qt_en.ts  tootrain-qt_ja.ts  urlemoji.h
.circleci-x/: config.yml
.github/workflows/: build.yaml  release.yaml
config/: config.xml
images/: 1024x1024.icns  32x32.icns  icon.rc  icon_128.icns
installer-win/net.b123400.tootrainqt/meta/: installscript.qs  package.xml
mastodon/: account.cpp  account.h  app.cpp  app.h  client.cpp  client.h  emoji.cpp  emoji.h  mastodonlist.cpp  mastodonlist.h  mastodonsettingwindow.cpp  mastodonsettingwindow.h  mastodonsettingwindow.ui  status.cpp  status.h  streamevent.cpp  streamevent.h
src/: aboutdialog.cpp  aboutdialog.ui  account.h  animationstate.h  dummystatus.cpp  dummystatus.h  imagemanager.cpp  imagemanager.h  mainwindow.cpp  mainwindow.h  settingmanager.cpp  settingmanager.h  settingwindow.cpp  settingwindow.h  settingwindow.ui  status.cpp  status.h  statusemoji.h  statusimageloader.cpp  streamevent.cpp  streamevent.h  streammanager.cpp  streammanager.h  urlemoji.cpp
src/mastodon/: account.cpp  account.h  app.h  client.cpp  client.h  emoji.cpp  emoji.h  mastodonoauthwindow.cpp  mastodonoauthwindow.h  mastodonoauthwindow.ui  mastodonsettingwindow.cpp  mastodonsettingwindow.h  mastodonsettingwindow.ui  status.cpp  status.h  streamevent.cpp  streamevent.h
src/misskey/: misskeyaccount.cpp  misskeyaccount.h  misskeyauthwindow.cpp  misskeyauthwindow.h  misskeyauthwindow.ui  misskeyclient.cpp  misskeyclient.h  misskeyemoji.cpp  misskeyemoji.h  misskeyoauthwindow.cpp  misskeyoauthwindow.h  misskeyoauthwindow.ui  misskeysettingwindow.cpp  misskeysettingwindow.h  misskeysettingwindow.ui  misskeystatus.cpp  misskeystatus.h  misskeystreamevent.cpp  misskeystreamevent.h  misskeystreamsource.cpp  misskeystreamsource.h  misskeywellknown.cpp  misskeywellknown.h
